--- a/index.html
+++ b/index.html
@@ -1,64 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>wellcome to my webpage</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Merriweather:ital,wght@1,900&family=PT+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
-    <table cellspacing="20">
-      <td><img src="https://media-exp1.licdn.com/dms/image/C5603AQFSlwLqOjDMLg/profile-displayphoto-shrink_100_100/0?e=1599696000&v=beta&t=sZ0p751_UU9wPaJoi77oZzgoUciwdHYp_t1F0fCUqaY" alt="Deshan Sumanasinghe"></td>
-      <td><h1>Deshan Sumanasinghe</h1>
-      <p><em>52 Birchington street Beckenham WA 6107</em></p>
-      <p><em><strong>nipundeshan@gmail</strong>.</em></p>
-      <p><strong><a href="https://www.ecu.edu.au/"">Edith Cowen University</a></strong></p>
-      </td>
-    </table>
-    <hr>
-    <h3>Certifications</h3>
-    <ol>
-      <li>Linux Command line Master</li>
-      <li><a href="https://www.splunk.com/">SPLUNK fudementals 01</a></li>
-      <li>Computer science</li>
-      <ul>
-        <li>python</li>
-        <li>system analysis</li>
-        <li>SQL</li>
-      </ul>
-    </ol>
+    <div class="toppest">
+      <img class="topcloud" src="images/cloud.png" alt="cloud">
+      <h1>I'm Deshan </h1>
+      <h2>I'm an experienced <span class="pro">web</span> developer</h2>
+      <img class="bottomcloud" src="images/cloud.png" alt="cloud">
+      <img src="images/mountain.png" alt="mountain">
+    </div>
 
-    <hr>
-    <h3>Education</h3>
-    <table cellspacing="10">
-      <thead>
-        <td><strong>Date</strong></td>
-        <td><strong>Work</strong></td>
-      </thead>
-      <tbody>
-        <tr>
-          <td>2019-2021</td>
-          <td>Bachelor of Information Technology </td>
-        </tr>
-    </tbody>
-    </table>
-    <hr>
-    <h3>Skills</h3>
-    <table cellspacing="20">
-      <tr>
-        <td>Python </td>
-        <td>&#11088;&#11088;&#11088;&#11088;</td>
-        <td>SQL </td>
-        <td>&#11088;&#11088;&#11088;</td>
-      </tr>
-      <tr>
-        <td>Bash</td>
-        <td>&#11088;&#11088;&#11088;&#11088;</td>
-        <td>HTML </td>
-        <td>&#11088;&#11088;</td>
-      </tr>
-    </table>
-    <hr>
-    <p>Click to view <a href="hobbies.html">My hobbies</a></p>
-    <p><a href="contact.html">Contact details</a></p>
+    <div class="middle-container">
+      <div class="profile">
+        <img class="pro-pic"src="images/deshan.png" alt="Deshan Sumanasinghe">
+        <h2>Hello.</h2>
+        <p class="intro">My name is Deshan Sumanasinghe. I'm an experienced web developer and i'm very much looking forward to help you with creating your dream website</p>
+      </div>
+      <hr>
+      <div class="skills">
+        <h2>My Skills.</h2>
+        <div class="skill-row">
+          <img class="burgers" src="https://media2.giphy.com/media/8MObiTsZrFlTi/200w.webp?cid=ecf05e47d507558654ea9ad211b6c652a0dc6056395a57a5&rid=200w.webp" alt="Always-hungry">
+          <h3>Burgers</h3>
+          <p>Love eating burgers. And of course always have space in my tummy for burgers.</p>
+        </div>
+        <div class="skill-row">
+          <img class="hotwings" src="https://media1.giphy.com/media/8FPjZCK4mMDeCHG7Nb/200w.webp?cid=ecf05e473dcd742b964c2ec8f118c6b88ac05c791a04e189&rid=200w.webp" alt="hot wings">
+          <h3>Hot wings is bae</h3>
+          <p class="wings">Mild Hot or Spicy, prefer anything as long as it's Hot Wings. Hot wings and coding sums up my day.</p>
+        </div>
+      </div>
+      <hr>
+      <div class="contact-me">
+        <h2>Get In Touch</h2>
+        <h3>If you love burgers and hot wings as much as i do.</h3>
+        <p class="footer">lets talk about how awesome they are while we code your DREAM web site!</p>
+        <a class="btn" href="mailto:nipundeshan@email.com">CONTACT ME</a>
+      </div>
+  </div>
+
+  <div class="bottom-container">
+    <a class="footer-link" href="https://www.linkedin.com/in/deshan-sumanasinghe-096092180/">LinkedIn</a>
+    <a class="footer-link" href="https://github.com/Nipuns1999">GITHUB</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="name">© 2020 Deshan Sumanasinghe.</p>
+  </div>
+
 
   </body>
 </html>
