--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <div class="toppest">
-      <img class="topcloud" src="images/cloud.png" alt="cloud">
+      <img class="topcloud" src="cloud.png" alt="cloud">
       <h1>I'm Deshan </h1>
       <h2>I'm an experienced <span class="pro">web</span> developer</h2>
-      <img class="bottomcloud" src="images/cloud.png" alt="cloud">
-      <img src="images/mountain.png" alt="mountain">
+      <img class="bottomcloud" src="cloud.png" alt="cloud">
+      <img src="mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="pro-pic"src="images/deshan.png" alt="Deshan Sumanasinghe">
+        <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
         <h2>Hello.</h2>
         <p class="intro">My name is Deshan Sumanasinghe. I'm an experienced web developer and i'm very much looking forward to help you with creating your dream website</p>
       </div>
