--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="skill-row">
           <img class="hotwings" src="https://media1.giphy.com/media/8FPjZCK4mMDeCHG7Nb/200w.webp?cid=ecf05e473dcd742b964c2ec8f118c6b88ac05c791a04e189&rid=200w.webp" alt="hot wings">
-          <h3>Hot wings is bae</h3>
+          <h3>Hot wings</h3>
           <p class="wings">Mild Hot or Spicy, prefer anything as long as it's Hot Wings. Hot wings and coding sums up my day.</p>
         </div>
       </div>
