--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <title>wellcome to my webpage</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Merriweather:ital,wght@1,900&family=PT+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="toppest">
-      <img class="topcloud" src="cloud.png" alt="cloud">
+      <img class="topcloud" src="images/cloud.png" alt="cloud">
       <h1>I'm Deshan </h1>
       <h2>I'm an experienced <span class="pro">web</span> developer</h2>
-      <img class="bottomcloud" src="cloud.png" alt="cloud">
-      <img src="mountain.png" alt="mountain">
+      <img class="bottomcloud" src="images/cloud.png" alt="cloud">
+      <img src="images/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
       <div class="profile">
-        <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
+        <img class="pro-pic"src="images/deshan.png" alt="Deshan Sumanasinghe">
         <h2>Hello.</h2>
         <p class="intro">My name is Deshan Sumanasinghe. I'm an experienced web developer and i'm very much looking forward to help you with creating your dream website</p>
       </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="skill-row">
           <img class="hotwings" src="https://media1.giphy.com/media/8FPjZCK4mMDeCHG7Nb/200w.webp?cid=ecf05e473dcd742b964c2ec8f118c6b88ac05c791a04e189&rid=200w.webp" alt="hot wings">
-          <h3>Hot wings</h3>
+          <h3>Hot wings is bae</h3>
           <p class="wings">Mild Hot or Spicy, prefer anything as long as it's Hot Wings. Hot wings and coding sums up my day.</p>
         </div>
       </div>
@@ -41,14 +41,13 @@
         <h2>Get In Touch</h2>
         <h3>If you love burgers and hot wings as much as i do.</h3>
         <p class="footer">lets talk about how awesome they are while we code your DREAM web site!</p>
-        <a class="btn" href="mailto:nipundeshan@email.com">CONTACT ME</a>
+        <a class="btn" href="mailto:nipundeshan@gmail.com">CONTACT ME</a>
       </div>
   </div>
 
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/deshan-sumanasinghe-096092180/">LinkedIn</a>
     <a class="footer-link" href="https://github.com/Nipuns1999">GITHUB</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
     <p class="name">© 2020 Deshan Sumanasinghe.</p>
   </div>
 
