--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>wellcome to my webpage</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Merriweather:ital,wght@1,900&family=PT+Serif&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="toppest">
-      <img class="topcloud" src="images/cloud.png" alt="cloud">
+      <img class="topcloud" src="cloud.png" alt="cloud">
       <h1>I'm Deshan </h1>
       <h2>I'm an experienced <span class="pro">web</span> developer</h2>
       <img class="bottomcloud" src="images/cloud.png" alt="cloud">
@@ -18,7 +18,7 @@
 
     <div class="middle-container">
       <div class="profile">
-        <img class="pro-pic"src="images/deshan.png" alt="Deshan Sumanasinghe">
+        <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
         <h2>Hello.</h2>
         <p class="intro">My name is Deshan Sumanasinghe. I'm an experienced web developer and i'm very much looking forward to help you with creating your dream website</p>
       </div>
