--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <img class="topcloud" src="cloud.png" alt="cloud">
       <h1>I'm Deshan </h1>
       <h2>I'm an experienced <span class="pro">web</span> developer</h2>
-      <img class="bottomcloud" src="images/cloud.png" alt="cloud">
-      <img src="images/mountain.png" alt="mountain">
+      <img class="bottomcloud" src="cloud.png" alt="cloud">
+      <img src="mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
