--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css"> 
+    <link rel="stylesheet" href="styles.css"> 
     <title>About me | Deshan Sumanasinghe</title>
   </head>
   <body>
@@ -37,7 +37,7 @@
     <!-- <h1 style="font-family: 'Merriweather', serif; 
     font-size: 40px;">Welcome to my page!</h1> -->
     <div class="toppest">
-        <img class="topcloud" src="images/cloud.png" alt="cloud">
+        <img class="topcloud" src="cloud.png" alt="cloud">
         <h1 style="font-family: 'Merriweather', serif; 
         font-size: 50px; margin-bottom: 1rem; color: #40514E;">I'm Deshan welcome to my Web Page!</h1>
         <h2 style="color:  #40514E;">I'm a freelance<span class="pro">web</span> developer</h2>
