--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-4"><b>Hello!</b></h1>
-            <p class="lead"><em>My name is Deshan Sumanasinghe and welcome to my personal website!. I'm currently an undergraduate student At Edith Cowan University Studying Computer Science and i'm also a freelance Web Developer. to learn more about me Click the button Below!</em></p>
+            <p class="lead"><em>My name is Deshan Sumanasinghe and welcome to my personal website!. I'm currently an undergraduate student At Edith Cowan University Studying Computer Science and i'm also a freelance Web Developer. To learn more about me Click the button Below!</em></p>
             <hr class="my-4">
             <a class="btn btn-secondary btn-lg" href="about.html" role="button">About Me</a>
             </p>
