new changes with the background pic

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="./">Deshan Sumanasinghe</a>
+          <a class="navbar-brand" href="index.html">Deshan Sumanasinghe</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,22 +33,21 @@
           </div>
         </div>
       </nav>
-    <br>
     <!-- <h1 style="font-family: 'Merriweather', serif; 
     font-size: 40px;">Welcome to my page!</h1> -->
     <div class="toppest">
-        <img class="topcloud" src="cloud.png" alt="cloud">
+    
         <h1 style="font-family: 'Merriweather', serif; 
-        font-size: 50px; margin-bottom: 1rem; color: #40514E;">I'm Deshan welcome to my Web Page!</h1>
-        <h2 style="color:  #40514E;">I'm a freelance<span class="pro"> web</span> developer</h2>
-        <img class="bottomcloud" src="cloud.png" alt="cloud">
-        <img src="mountain.png" alt="mountain">
-      </div>
+        font-size: 50px; margin-bottom: 1rem; color: whitesmoke">I'm Deshan!, welcome to my Web Page!</h1>
+        <h2 style="font-family: 'Merriweather', serif; color: whitesmoke;">I'm a freelance<span class="pro"> web</span> developer</h2>
+        
+        <!-- <img src="mountain.png" alt="mountain"> -->
+    </div>
   
       <div class="middle-container">
         <div class="profile">
           <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
-          <h2>Hello.</h2>
+          <h2 style="padding-top: 5px;">Hello</h2>
           <p class="intro">My name is Deshan Sumanasinghe. I'm an experienced web developer and i'm very much looking forward to help you with creating your dream website</p>
         </div>
         <hr>
