Color changes  and Hr tags

--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
         </div>
         <hr>
         <div class="skills">
-          <h2>My Skills.</h2>
+          <h2>My Skills</h2>
           <div class="skill-row">
             <img class="burgers" src="https://media2.giphy.com/media/8MObiTsZrFlTi/200w.webp?cid=ecf05e47d507558654ea9ad211b6c652a0dc6056395a57a5&rid=200w.webp" alt="Always-hungry">
             <h3>Burgers</h3>
