--- a/resume.html
+++ b/resume.html
@@ -34,11 +34,12 @@
       </nav>
     <br>
     <h1 style="font-family: 'Merriweather', serif; 
-    font-size: 40px;">Welcome! this is my resume page</h1>
-    <hr>
+    font-size: 40px; color: #536D6D;">Welcome! This is my resume page</h1>
+    <hr style="margin-left: 20%; margin-right: 20%; border: 2px solid black;">
     <div id="resume">
     <h1 style="font-family: 'Merriweather', serif; 
     font-size: 40px;"><b><em> Deshan Sumanasinghe</em></b></h1>
+    <hr style=" margin:10px auto; border: 2px solid black;">
     <br>
     <p> Mobile: 0450-794-889 <br>
         Email: nipundeshan@gmail.com <br>
@@ -47,10 +48,12 @@
     </p>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">Summary</h2>
+    <hr id="line">
     <p>An undergraduate student at Edith Cowan University, studying Bachelor of Information Technology/Cyber Security as the major. I am a self-motivated person, and always willing to expand my knowledge by learning new things every day. Also, very much interested, and passionate about Information Technology and Cyber Security.
     </p>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">Education</h2>
+    <hr id="line">
     <h3 style="color: black; margin-bottom: 0%;">2019-2021</h3>
     <P style="margin-bottom: 0%;">Bachelor of Information Technology/Cyber Security</P>
     <P style="color: black;"><em>Edith Cowan University</em></P>
@@ -62,10 +65,12 @@
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">PROFESSIONAL TRAINING AND CERTIFICATIONS</h2>
+    <hr id="line">
     <p><b style="color: black;">Programming languages:</b> Python, HTML, PHP, JavaScript, Bash, and CSS <br><b style="color: black;">DBMS:</b> MySQL and MariaDB<br><b style="color: black;">Certifications:</b> Linux Mastery: Master the Linux Command Line (Udemy) and Splunk 7.x Fundamentals Part 01</p>
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">PROFESSIONAL ATTRIBUTES</h2>
+    <hr id="line">
     <p style="color: black;">UNI Projects </p>
     <li>Implemented a Virtual Private network server (VPN) using Linux (Ubuntu) and assigned client access to the VPN server.</li>
     <li>Implemented a Web application/Database management system using HTML, CSS, PHP, and JavaScript and used MariaDB to store the relevant data.</li>
@@ -76,6 +81,7 @@
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">SOFT SKILLS</h2>
+    <hr id="line">
     <li><b style="color: black;">Leadership:</b> Have experience in leading the college Cricket team for more than two years; Ability to manage each team member according to their strengths and weaknesses. </li>
     <li><b style="color: black;">Communication:</b> Able to interact and effectively communicate with people from different diverse backgrounds. </li>
     <li><b style="color: black;">Time management:</b> Highly capable of getting work done before deadlines and without being overlooked. </li>
@@ -83,6 +89,7 @@
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">SPORTS ACHIEVEMENTS</h2>
+    <hr id="line">
     <li>Represented Subiaco Marist Cricket Club for 2019/2020 cricket season and 2020/2021 (ongoing) cricket season as a professional contracted cricketer. </li>
     <li>Represented Taylors lakes Cricket Club in Melbourne for the 2018/2019 cricket season as a professional contracted cricketer.</li>
     <li>Represented Sri Lankan Under 19 National Cricket team and toured Australia in 2017. </li>
@@ -90,6 +97,7 @@
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">PROFESSIONAL ASSOCIATIONS</h2>
+    <hr id="line">
     <p>Australian Computer Society (ACS)<br><em style="color: black;">Member</em></p>
   </div>
   <div class="bottom-container">
