new changes in resume

--- a/resume.html
+++ b/resume.html
@@ -33,15 +33,20 @@
         </div>
       </nav>
     <br>
-    <h1 style="font-family: 'Merriweather', serif; 
-    font-size: 40px; color: #536D6D;">Welcome! This is my resume page</h1>
-    <hr style="margin-left: 20%; margin-right: 20%; border: 2px solid black;">
+    <div class="middle-container">
+      <div class="profile">
+        <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
+        <h1 style="font-family: 'Merriweather', serif; font-size: 40px; color: #536D6D; margin-top: 20px;">Welcome! This is my resume page</h1>
+        <hr style="margin-left: 20%; margin-right: 20%; border: 2px solid black;">
+      </div>
+    </div>
+
     <div id="resume">
     <h1 style="font-family: 'Merriweather', serif; 
     font-size: 40px;"><b><em> Deshan Sumanasinghe</em></b></h1>
     <hr style=" margin:10px auto; border: 2px solid black;">
     <br>
-    <p> Mobile: 0450-794-889 <br>
+    <p> 
         Email: nipundeshan@gmail.com <br>
         Addresses: 52 Birchington street, Beckenham WA 6107 <br>
         DOB: 01/28/1999<br>
@@ -59,14 +64,18 @@
     <P style="color: black;"><em>Edith Cowan University</em></P>
     
       <li>Majoring in Cyber Security</li>
-      <li>Key Units – Programming Principles, Computer Security, Information Security, Scripting languages, System Analysis, System, Database Design, Enterprise Data, Cryptographic Concepts, Operating Systems, Applied Communication, Computer Fundamentals</li>
-      <li>average (WAM) 85.52 and the Current GPA is 3.875.</li>
-      <li>9 HIGH DISTINCTIONS and 3 DISTINCTIONS out of 12 units.</li>
+      <li>Key Units – Programming Principles, Computer Security, Information Security, Scripting languages, System Analysis, System, Database Design, Enterprise Data, Cryptographic Concepts, Operating Systems, Applied Communication, Computer Fundamentals, Computer Forensics, Interactive Web-development, Project Methods and Professionalism, Network Security Fundamentals</li>
+      <li>Course average (WAM) 86.37 and the Current GPA is 3.906.</li>
+      <li>13 HIGH DISTINCTIONS and 3 DISTINCTIONS out of 16 units.</li>
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">PROFESSIONAL TRAINING AND CERTIFICATIONS</h2>
     <hr id="line">
-    <p><b style="color: black;">Programming languages:</b> Python, HTML, PHP, JavaScript, Bash, and CSS <br><b style="color: black;">DBMS:</b> MySQL and MariaDB<br><b style="color: black;">Certifications:</b> Linux Mastery: Master the Linux Command Line (Udemy) and Splunk 7.x Fundamentals Part 01</p>
+    <p><b style="color: black;">Programming languages:</b></p><li>Python</li><li>HTML</li><li>PHP</li><li>JavaScript</li><li>Bash</li><li>CSS</li>
+    <br> 
+    <p><b style="color: black;">DBMS:</b></p><li>MySQL</li><li>MariaDB</li>
+    <br> 
+    <p><b style="color: black;">Certifications:</b></p><li>Linux Mastery: Master the Linux Command Line (Udemy)</li><li>Splunk 7.x Fundamentals Part 01</li><li>CompTIA (SYO-501 & SYO-601) Complete Course & Exam</li>
     <br>
     <h2 style="font-family: 'Merriweather', serif; 
     font-size: 20px;">PROFESSIONAL ATTRIBUTES</h2>
@@ -75,7 +84,7 @@
     <li>Implemented a Virtual Private network server (VPN) using Linux (Ubuntu) and assigned client access to the VPN server.</li>
     <li>Implemented a Web application/Database management system using HTML, CSS, PHP, and JavaScript and used MariaDB to store the relevant data.</li>
     <br>
-    <p style="color: black;">Side Projects</p>
+    <p style="color: black;">Personal Projects</p>
     <li>Implemented a personal static website using HTML and hosted the website using GitHub pages. <a href="https://nipuns1999.github.io/Web-development/ ">https://nipuns1999.github.io/Web-development/</a></li>
     <li>Implemented an interactive website about Bali and hosted it on the internet <a href="https://deshan98.com/">https://deshan98.com/</a> </li>
     <br>
