changes in the description

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
         <div class="profile">
           <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
           <h2 style="padding-top: 5px;">Hello</h2>
-          <p class="intro">My name is Deshan Sumanasinghe. I'm an experienced web developer and i'm very much looking forward to help you with creating your dream website</p>
+          <p class="intro">My name is Deshan Sumanasinghe. I'm a Freelance web developer and i'm very much looking forward to help you with creating your dream website</p>
         </div>
         <hr>
         <div class="skills">
