--- a/about.html
+++ b/about.html
@@ -20,6 +20,35 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <title>About me | Deshan Sumanasinghe</title>
+    <script language="JavaScript" type="text/javascript">
+    var slideIndex = 1;
+  showSlides(slideIndex);
+
+  function plusSlides(n) {
+    showSlides(slideIndex += n);
+  }
+
+  function currentSlide(n) {
+    showSlides(slideIndex = n);
+  }
+
+  function showSlides(n) {
+    var i;
+    var slides = document.getElementsByClassName("mySlides");
+    var dots = document.getElementsByClassName("dot");
+    if (n > slides.length) {slideIndex = 1}
+    if (n < 1) {slideIndex = slides.length}
+    for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+    }
+    for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+    }
+    slides[slideIndex-1].style.display = "block";
+    dots[slideIndex-1].className += " active";
+  }
+
+    </script>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -45,8 +74,8 @@
     <div class="toppest">
 
         <h1 style="font-family: 'Merriweather', serif;
-        font-size: 50px; margin-bottom: 1rem; color: whitesmoke">I'm Deshan!, welcome to my Web Page!</h1>
-        <h2 style="font-family: 'Merriweather', serif; color: whitesmoke;">I'm a freelance<span class="pro"> web</span> developer</h2>
+        font-size: 50px; margin-bottom: 1rem; color: #F88017">I'm Deshan!, welcome to my Web Page!</h1>
+        <h2 style="font-family: 'Merriweather', serif; color: #F88017;">I'm a freelance<span class="pro"> web</span> developer/Professional Contracted Cricketer</h2>
 
         <!-- <img src="mountain.png" alt="mountain"> -->
     </div>
@@ -55,7 +84,7 @@
         <div class="profile">
           <img class="pro-pic"src="deshan.png" alt="Deshan Sumanasinghe">
           <h2 style="padding-top: 5px;">Hello</h2>
-          <p class="intro">My name is Deshan Sumanasinghe. I'm a Freelance web developer and i'm very much looking forward to help you with creating your dream website</p>
+          <p class="intro">My name is Deshan Sumanasinghe and i'm 22 Years old. I'm a Freelance web developer/Professional Contracted Cricketer. Please go through the resume section to learn more about Me :)</p>
         </div>
         <hr>
         <div class="skills">
@@ -102,7 +131,7 @@
             </div>
           </section>
 
-          <h2>Some Other Skills</h2>
+          <h2>Some Other Skills I'm proud of </h2>
           <div class="skill-row">
             <img class="burgers" src="https://media2.giphy.com/media/8MObiTsZrFlTi/200w.webp?cid=ecf05e47d507558654ea9ad211b6c652a0dc6056395a57a5&rid=200w.webp" alt="Always-hungry">
             <h3>Burgers</h3>
@@ -113,11 +142,56 @@
             <h3>Hot wings is bae</h3>
             <p class="wings">Mild Hot or Spicy, prefer anything as long as it's Hot Wings. Hot wings and coding sums up my day.</p>
           </div>
+
+
+
         </div>
+      </div>
+      <h2 class="margin-top: 30px">Enjoy The Slideshow</h2>
+      <section id="last-container">
+
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <ol class="carousel-indicators">
+             <li data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"></li>
+             <li data-bs-target="#carouselExampleDark" data-bs-slide-to="1"></li>
+             <li data-bs-target="#carouselExampleDark" data-bs-slide-to="2"></li>
+             <li data-bs-target="#carouselExampleDark" data-bs-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+            <img class="image" src="sl.jpg" alt="Sl vs Australia U19 one day match">
+            </div>
+            <div class="carousel-item" data-bs-interval="10000">
+            <img class="testimonials-image" src="jo.jpg"  alt="Jo-Pete">
+            </div>
+            <div class="carousel-item" data-bs-interval="10000">
+            <img class="testimonials-image" src="joe-pete.jpg"  alt="Jo-Pete Best Bowler Award">
+            </div>
+            <div class="carousel-item" >
+            <img class="images" src="lakes.jpg"  alt="Tylors Lakes Cricket Club">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleDark" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleDark" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">next</span>
+        </a>
+        </div>
+
+
+
+     </section>
+
+
+
+
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3>If you love burgers and hot wings as much as i do.</h3>
+          <h3>If you love burgers, hot wings and cricket as much as i do.</h3>
           <p class="footer">lets talk about how awesome they are while we code your DREAM web site!</p>
           <a class="btn" href="mailto:nipundeshan@gmail.com">CONTACT ME</a>
         </div>
