--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css"> 
+    <link rel="stylesheet" href="styles.css">
     <title>Deshan Sumanasinghe</title>
   </head>
   <body>
@@ -36,7 +36,7 @@
     <div class="container">
         <div class="jumbotron">
             <h1 class="display-4"><b>Hello!</b></h1>
-            <p class="lead"><em>My name is Deshan Sumanasinghe and welcome to my personal website!. I'm currently an undergraduate student At Edith Cowan University Studying Computer Science and i'm also a freelance Web Developer. To learn more about me Click the button Below!</em></p>
+            <p class="lead"><em>My name is Deshan Sumanasinghe and welcome to my personal website!. I'm currently an undergraduate student At Edith Cowan University Studying Computer Science and i'm also a freelance Web Developer/Professional Contracted Cricketer. To learn more about me Click the button Below!</em></p>
             <hr class="my-4">
             <a class="btn btn-secondary btn-lg" href="about.html" role="button">About Me</a>
             </p>
@@ -50,9 +50,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
-    
+
   </body>
 </html>
