--- a/resume.html
+++ b/resume.html
@@ -48,7 +48,6 @@
     <br>
     <p>
         Email: nipundeshan@gmail.com <br>
-        Addresses: 52 Birchington street, Beckenham WA 6107 <br>
         DOB: 01/28/1999<br>
     </p>
     <h2 style="font-family: 'Merriweather', serif;
@@ -65,7 +64,8 @@
 
       <li>Majoring in Cyber Security</li>
       <li>Key Units – Programming Principles, Computer Security, Information Security, Scripting languages, System Analysis, System, Database Design, Enterprise Data, Cryptographic Concepts, Operating Systems, Applied Communication, Computer Fundamentals, Computer Forensics, Interactive Web-development, Project Methods and Professionalism, Network Security Fundamentals</li>
-      <li>Course average (WAM) 86.37 and the Current GPA is 3.906.</li>
+      <li>Course average (WAM) 86.37</li>
+      <li>Current GPA is 3.906.</li>
       <li>13 HIGH DISTINCTIONS and 3 DISTINCTIONS out of 16 units.</li>
     <br>
     <h2 style="font-family: 'Merriweather', serif;
@@ -75,19 +75,25 @@
     <br>
     <p><b style="color: black;">DBMS:</b></p><li>MySQL</li><li>MariaDB</li>
     <br>
-    <p><b style="color: black;">Certifications:</b></p><li>Linux Mastery: Master the Linux Command Line (Udemy)</li><li>Splunk 7.x Fundamentals Part 01</li><li>CompTIA (SYO-501 & SYO-601) Complete Course & Exam</li><li>CompTIA Security+</li>
+    <p><b style="color: black;">Certifications:</b></p><li>Linux Mastery: Master the Linux Command Line (Udemy)</li><li>Splunk 7.x Fundamentals Part 01</li><li>CompTIA (SYO-501 & SYO-601) Complete Course & Exam</li><li>CompTIA Security+</li><li>R Programming for Statistics and Data Science 2021</li>
     <br>
     <h2 style="font-family: 'Merriweather', serif;
     font-size: 20px;">PROFESSIONAL ATTRIBUTES</h2>
     <hr id="line">
-    <p style="color: black;">UNI Projects </p>
-    <li>Implemented a Virtual Private network server (VPN) using Linux (Ubuntu) and assigned client access to the VPN server.</li>
-    <li>Implemented a Web application/Database management system using HTML, CSS, PHP, and JavaScript and used MariaDB to store the relevant data.</li>
-    <li>Implemented virtual machines for several Linux distributions upon necessary software and hardware requirements using VMware workstation.</li>
+    <p style="color: blue;">UNI Projects </p>
+    <p style="color: black;"><b>Network Design and Implimentation</b></p>
+    <p>Implemented a Virtual Private network server (VPN) using Linux (Ubuntu) and assigned client access to the VPN server.</p>
+    <p style="color: black;"><b>Web Application and Database Management</b></p>
+    <p>Implemented a Web application/Database management system using HTML, CSS, PHP, and JavaScript and used MariaDB to store the relevant data.</p>
+    <p style="color: black;"><b>Virtualisation</b></p>
+    <p>Implemented virtual machines for several Linux distributions upon necessary software and hardware requirements using VMware workstation.</p>
+    <p style="color: black;"><b>Information Security Analysis and Risk Assesment</b></p>
+    <p>Identifying and anlysing strengths/weekneses on a given information security posture to Develop a risk assement and provide necessary countermeasures.</p>
     <br>
-    <p style="color: black;">Personal Projects</p>
-    <li>Implemented a personal static website using HTML and hosted the website using GitHub pages. <a href="https://nipuns1999.github.io/Web-development/ ">https://nipuns1999.github.io/Web-development/</a></li>
-    <li>Implemented an interactive website about Bali and hosted it on the internet <a href="https://deshan98.com/">https://deshan98.com/</a> </li>
+    <p style="color: blue;">Personal Projects</p>
+    <p style="color: black;"><b>Web Development</b></p>
+    <p>Implemented a personal static website using HTML and hosted the website using GitHub pages. <a href="https://nipuns1999.github.io/Web-development/ ">https://nipuns1999.github.io/Web-development/</a></p>
+    <p>Implemented an interactive website about Bali and hosted it on the internet <a href="https://deshan98.com/">https://deshan98.com/</a> </p>
     <br>
     <h2 style="font-family: 'Merriweather', serif;
     font-size: 20px;">SOFT SKILLS</h2>
