--- a/resume.html
+++ b/resume.html
@@ -81,19 +81,19 @@
     font-size: 20px;">PROFESSIONAL ATTRIBUTES</h2>
     <hr id="line">
     <p style="color: blue;">UNI Projects </p>
-    <p style="color: black;"><b>Network Design and Implimentation</b></p>
-    <p>Implemented a Virtual Private network server (VPN) using Linux (Ubuntu) and assigned client access to the VPN server.</p>
-    <p style="color: black;"><b>Web Application and Database Management</b></p>
-    <p>Implemented a Web application/Database management system using HTML, CSS, PHP, and JavaScript and used MariaDB to store the relevant data.</p>
-    <p style="color: black;"><b>Virtualisation</b></p>
-    <p>Implemented virtual machines for several Linux distributions upon necessary software and hardware requirements using VMware workstation.</p>
-    <p style="color: black;"><b>Information Security Analysis and Risk Assesment</b></p>
-    <p>Identifying and anlysing strengths/weekneses on a given information security posture to Develop a risk assement and provide necessary countermeasures.</p>
+    <p style="color: black; margin-bottom:8px"><b>Network Design and Implimentation</b></p>
+    <p style="margin-bottom:8px">Implemented a Virtual Private network server (VPN) using Linux (Ubuntu) and assigned client access to the VPN server.</p>
+    <p style="color: black; margin-bottom:8px"><b>Web Application and Database Management</b></p>
+    <p style="margin-bottom:8px">Implemented a Web application/Database management system using HTML, CSS, PHP, and JavaScript and used MariaDB to store the relevant data.</p>
+    <p style="color: black; margin-bottom:8px"><b>Virtualisation</b></p>
+    <p style="margin-bottom:8px">Implemented virtual machines for several Linux distributions upon necessary software and hardware requirements using VMware workstation.</p>
+    <p style="color: black; margin-bottom:8px"><b>Information Security Analysis and Risk Assesment</b></p>
+    <p style="margin-bottom:0px">Identifying and anlysing strengths/weekneses on a given information security posture to Develop a risk assement and provide necessary countermeasures.</p>
     <br>
     <p style="color: blue;">Personal Projects</p>
-    <p style="color: black;"><b>Web Development</b></p>
-    <p>Implemented a personal static website using HTML and hosted the website using GitHub pages. <a href="https://nipuns1999.github.io/Web-development/ ">https://nipuns1999.github.io/Web-development/</a></p>
-    <p>Implemented an interactive website about Bali and hosted it on the internet <a href="https://deshan98.com/">https://deshan98.com/</a> </p>
+    <p style="color: black; margin-bottom:8px"><b>Web Development</b></p>
+    <p style="margin-bottom:2px">Implemented a personal static website using HTML and hosted the website using GitHub pages. <a href="https://nipuns1999.github.io/Web-development/ ">https://nipuns1999.github.io/Web-development/</a></p>
+    <p style="margin-bottom:4px">Implemented an interactive website about Bali and hosted it on the internet <a href="https://deshan98.com/">https://deshan98.com/</a> </p>
     <br>
     <h2 style="font-family: 'Merriweather', serif;
     font-size: 20px;">SOFT SKILLS</h2>
